--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dns": "^0.2.2",
+    "express": "^4.17.1",
     "gh-pages": "^2.1.1",
     "google-maps-react": "^2.0.2",
+    "mongodb-core": "^3.2.7",
+    "mongoose-encryption": "^2.0.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-geolocated": "^3.0.1",
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mongodb": "^3.3.3"
   }
 }
