--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://buszowid:1Ho77mFPmQAJ@review-92jvc.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://buszowid:1Ho77mFPmQAJ@review-92jvc.mongodb.net/Review?retryWrites=true&w=majority
