--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "country-code-lookup": "0.0.15",
     "dns": "^0.2.2",
     "express": "^4.17.1",
     "gh-pages": "^2.1.1",
