--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-geolocated": "^3.0.1",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
+    "react-s3": "^1.3.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "aws-s3": "^2.0.5",
     "mongodb": "^3.3.3"
   }
 }
