--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "core-js": "^3.4.7",
     "country-code-lookup": "0.0.15",
     "dns": "^0.2.2",
     "express": "^4.17.1",
@@ -12,9 +13,9 @@
     "google-maps-react": "^2.0.2",
     "mongodb-core": "^3.2.7",
     "mongoose-encryption": "^2.0.2",
-    "react": "^16.10.2",
-    "react-devtools": "^4.2.0",
-    "react-dom": "^16.10.2",
+    "react": "^16.12.0",
+    "react-devtools": "^4.2.1",
+    "react-dom": "^16.12.0",
     "react-geolocated": "^3.0.1",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
@@ -46,6 +47,6 @@
   },
   "devDependencies": {
     "aws-s3": "^2.0.5",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.5"
   }
 }
