--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zayedsheet.github.io/Review",
+  "homepage": ".",
   "name": "untitled",
   "version": "0.1.0",
   "private": true,
