--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "aws-s3": "^2.0.5",
-    "mongodb": "^3.4.0"
+    "mongodb": "^3.4.0",
+    "radium": "^0.26.0"
   }
 }
