--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,13 @@
     "google-maps-react": "^2.0.2",
     "mongodb-core": "^3.2.7",
     "mongoose-encryption": "^2.0.2",
-    "react": "^16.12.0",
-    "react-devtools": "^4.2.1",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
     "react-places-autocomplete": "^7.2.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -48,6 +47,7 @@
   "devDependencies": {
     "aws-s3": "^2.0.5",
     "mongodb": "^3.4.0",
-    "radium": "^0.26.0"
+    "radium": "^0.26.0",
+    "react-devtools": "^4.8.2"
   }
 }
