--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.5.0",
     "country-code-lookup": "0.0.15",
+    "disable-scroll": "^0.5.1",
     "dns": "^0.2.2",
     "express": "^4.17.1",
     "gh-pages": "^2.1.1",
